mType/tests/testFiles/annotation/error/array_invalid_default_error.mt
// MYT-375: array defaults must match the declared element type.

annotation BadDefault {
    int[] values = ["x"];
}
